styles.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Montserrat", sans-serif;
  font-size: 1rem;
  color: #404040;
  line-height: 1.6;
}

img {
  max-width: 100%;
}

/* ==================
    Typography
===================== */

h1,
h2,
strong {
  font-weight: 700;
}

.accent-color {
  color: #ffe600;
}

.page-title,
.subtitle {
  grid-column: 2 / -2;
  color: #000;
  text-align: center;
}

.page-title {
  font-size: 3rem;
  margin-bottom: 0.5em;
  justify-self: center;
}

.page-title::after {
  content: "";
  display: block;
  width: 100%;
  height: 30px;
  background: #ffe600;
  margin-top: -40px;
  margin-left: 15px;
}

.subtitle {
  margin: 0.5em 0 3em;
  font-size: 1.125rem;
}

.hero-title {
  font-size: 1.5rem;
  line-height: 1.4;
  margin-bottom: 0;
}

.hero-subtitle {
  font-size: 1.125rem;
}

.section-title {
  font-size: 1.125rem;
  color: #000;
  margin-top: 1.25em;
}

.section-title::after {
  content: "";
  display: block;
  width: 60px;
  height: 3px;
  margin-top: 10px;
  background: #ffe600;
}

.section-title-center::after {
  margin-left: auto;
  margin-right: auto;
}

.section-title:first-child {
  margin-top: 0;
}

/* buttons */

.btn {
  padding: 0.5em 1.75em;
  font-weight: 700;
  margin-top: 0.5em;
  text-decoration: none;
  border: 0;
  text-transform: capitalize;
}

.btn-primary {
  background: #ffe600;
  color: #000;
  justify-self: start;
}

.btn-primary:hover,
.btn-primary:focus {
  background: #f7dd95;
}

.btn:hover,
.btn:focus {
  cursor: pointer;
}

/* ==================
    general layout
===================== */

.main-grid {
  display: grid;
  grid-template-columns: minmax(1em, 1fr) minmax(0px, 500px) minmax(1em, 1fr);
  grid-column-gap: 2em;
}

@media (min-width: 750px) {
  .main-grid {
    grid-template-columns: minmax(1em, 1fr) repeat(3, minmax(150px, 320px)) minmax(
        1em,
        1fr
      );
  }
}

/* navigation */

.header {
  background: black;
}

.header-home {
  background: transparent;
  position: absolute;
  width: 100%;
}

.header-content {
  display: flex;
  grid-column: 2 / -2;
}

.logo-link {
  background-color: #ffe600;
  padding-top: 2em;
}

.nav {
  position: fixed;
  background: #000;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 100%;
  transform: translateX(0);
  transition: transform 250ms;
}

.navigation-open {
  transform: translateX(-100%);
}

.nav-list {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  height: 100%;
  align-items: center;
  justify-content: space-around;
  flex-direction: column;
  text-transform: uppercase;
}

.current {
  border-bottom: 1px solid #ffe600;
}
.nav-link {
  color: #fff;
  text-decoration: none;
  font-size: 3rem;
  font-weight: 700;
  padding-bottom: 0.2em;
}

.nav-link:hover,
.nav-link:focus {
  color: #ffe600;
}

.close-nav {
  border: 0;
  background: 0;
  color: #ffe600;
  font-weight: 700;
  font-size: 3rem;
  cursor: pointer;
  padding: 0.5em;
  position: absolute;
}

.open-nav {
  border: 0;
  background: 0;
  color: #fff;
  cursor: pointer;
  padding: 0.5em;
  margin-left: auto;
  font-size: 1.5em;
}

@media (min-width: 750px) {
  .open-nav,
  .close-nav {
    display: none;
  }

  .nav {
    position: initial;
  }

  .nav-list {
    flex-direction: row;
    justify-content: flex-start;
  }

  .nav-item {
    margin-left: 2em;
  }

  .nav-link {
    font-size: 1rem;
  }

  .header-home .nav {
    background: transparent;
  }
}

/* footer */

.footer {
  background: #ebebeb;
  padding: 4em 0;
  text-align: center;

  grid-template-areas:
    ". social ."
    ". main .";
}

.footer-main,
.social-list {
  grid-column: 2 / -2;
}

.footer-logo,
.footer-text,
.footer-fineprint {
  opacity: 0.3;
}

.footer-main {
  grid-area: main;
}

.footer-fineprint {
  font-size: 0.75rem;
  margin-top: 4em;
}

.social-list {
  grid-area: social;
  list-style: none;
  padding: 0;
  margin: 0 0 2em;
  display: flex;
  justify-content: center;
}

.social-link {
  color: #000;
  font-size: 1.75rem;
  margin: 0 0.5em;
}

.social-link:hover {
  color: #777;
}

@media (min-width: 750px) {
  .footer {
    grid-template-areas: ". main main social .";
  }

  .footer-main {
    text-align: left;
  }

  .social-list {
    justify-content: flex-end;
  }
}

/* ==================
    hero area
===================== */

.hero {
  background-image: url(img/hero-bg.jpg);
  background-size: cover;
  background-position: bottom;
  padding: 8em 0 4em;
  color: #fff;
}

.hero > * {
  grid-column: 2 / -2;
}

@media (min-width: 400px) {
  .hero > * {
    margin-right: 20%;
  }
}

@media (min-width: 750px) {
  .hero {
    padding: 10em 0 6em;
  }

  .hero > * {
    grid-column: 2 / span 2;
  }
}

/* ==================
    info section
===================== */

.info {
  padding: 4em 0;
  text-align: center;
}

.col {
  grid-column: 2 / -2;
}

@media (min-width: 750px) {
  .col {
    grid-column: span 1;
  }

  .col:first-child {
    grid-column: 2 / span 1;
  }
}

/* ==================
    template page
===================== */

.main-template {
  padding: 4em 0;
}

.main-template > * {
  grid-column: 2 / -2;
}

.main-image {
  margin-bottom: 1.5em;
  box-shadow: 5px 5px 0px black, 10px 10px 0 #ffe600;
}

@media (min-width: 750px) {
  .main-image,
  .secondary-text {
    grid-column: 2;
  }

  .main-text {
    grid-column: 3 / span 2;
    grid-row: span 2;
    margin-left: 1em;
  }
  .secondary-text {
    order: 1;
  }
}

/* Form */

form {
  display: grid;
}

label {
  font-weight: 700;
}

input,
textarea {
  margin-bottom: 0.75em;
  padding: 0.55em;
  font-family: inherit;
}

textarea {
  resize: none;
  height: 100px;
}

form .btn {
  justify-self: end;
  /* margin-left: auto; */
}

@media (min-width: 750px) {
  form {
    grid-template-columns: repeat(2, 1fr);
    grid-auto-flow: dense;
    grid-column-gap: 1em;
  }

  .fname {
    grid-column: 1;
  }

  .email {
    grid-column: 2;
  }
  .message {
    grid-column: span 2;
  }

  form .btn {
    grid-column: 2;
  }
}

